# tars

./: .gitignore  Dockerfile  MOSCOW_PRIORITIZATION.md  README.md  docker-compose.yml  package.json
docs/: ARCHITECTURE.md  DEV_SETUP_GUIDE.md  DEV_SETUP_SUMMARY.md  TARS_Architecture_Diagram.drawio
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
